Compra + Inventario MVC

--- a/TaskManager.UI/Views/Shared/_Layout.cshtml
+++ b/TaskManager.UI/Views/Shared/_Layout.cshtml
@@ -28,9 +28,9 @@
                     </ul>
                 </nav>
                 <nav class="sidebar">
-                    <ul>
+                    <ul style="list-style: none">
                         <li><a><span class="icon glyphicon glyphicon-link"></span>Portal Suministrador</a></li>
-                        <li><a><span class="icon glyphicon glyphicon-link"></span>Catálogo</a></li>
+                        <li><a asp-area="Suministrador" asp-controller="ProductoSuministrador" asp-action="Index"><span class="icon glyphicon glyphicon-link"></span>Catálogo(Suministradores)</a></li>
                         
                     </ul>
                 </nav>
