--- a/TaskManager.UI/Areas/Suministrador/Views/ComprarProductoSuministrador/Index.cshtml
+++ b/TaskManager.UI/Areas/Suministrador/Views/ComprarProductoSuministrador/Index.cshtml
@@ -3,6 +3,19 @@
 @{
 
 }
+
+@if (TempData["SuccessMessage"] != null)
+{
+        <script>
+            Swal.fire({
+                title: '¡Éxito!',
+                text: '@TempData["SuccessMessage"]',
+                icon: 'success',
+                confirmButtonText: 'OK'
+            });
+        </script>
+}
+
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 <h1 class="text-center">Compras Productos Suministradores</h1>
 
@@ -103,7 +116,7 @@
 
                 </td>
                 <td>
-                    <a class="btn btn-danger"><i class="bi bi-trash3-fill"></i></a>
+                    <a class="btn btn-danger" asp-action="Eliminar" asp-controller="ComprarProductoSuministrador" asp-route-id="@compra.Id"><i class="bi bi-trash3-fill"></i></a>
                     <a class="btn btn-info"><i class="bi bi-pencil-square"></i></a>
                     <a class="btn btn-success"><i class="bi bi-check-circle-fill"></i></a>
                     <a class="btn btn-primary"><i class="bi bi-printer"></i></a>
