--- a/TaskManager.UI/Areas/Suministrador/Views/ComprarProductoSuministrador/Index.cshtml
+++ b/TaskManager.UI/Areas/Suministrador/Views/ComprarProductoSuministrador/Index.cshtml
@@ -27,6 +27,31 @@
     <a asp-action="ComprasProductosSuministradoresExcel" asp-controller="ComprarProductoSuministrador" class="btn btn-info">Generar Excel</a>
     <a asp-action="" asp-controller="ComprarProductoSuministrador" class="btn btn-info">Generar PDF</a>
     <a asp-action="Index" asp-controller="ProductoSuministrador" class="btn btn-primary">Hacer Pedido</a>
+
+    <nav aria-label="Page navigation" style="float: right;">
+        <ul class="pagination">
+            @if (Model.PaginaActual > 1)
+            {
+                <li class="page-item">
+                    <a class="page-link" asp-action="Index" asp-route-pageNumber="@(Model.PaginaActual - 1)">Anterior</a>
+                </li>
+            }
+
+            @for (var i = 1; i <= Model.PaginasTotal; i++)
+            {
+                <li class="page-item @(i == Model.PaginaActual ? "active" : "")">
+                    <a class="page-link" asp-action="Index" asp-route-pageNumber="@i">@i</a>
+                </li>
+            }
+
+            @if (Model.PaginaActual < Model.PaginasTotal)
+            {
+                <li class="page-item">
+                    <a class="page-link" asp-action="Index" asp-route-pageNumber="@(Model.PaginaActual + 1)">Siguiente</a>
+                </li>
+            }
+        </ul>
+    </nav>
 </div>
 
 <table class="table table-bordered">
